--- a/index.html
+++ b/index.html
@@ -4,8 +4,77 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Secretaria Municipal da Saúde</title>
+	<!-- Fontes -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
+
+	<!-- Bootstrap core CSS -->
+	<link rel="stylesheet" type="text/css" href="assets/dist/css/bootstrap.min.css" >
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
+	<header>
+		<div class="container-xxl">
+			<div class="row">
+				<a href="#" class="brand">
+					<img src="img/logo-pmsp.svg">
+				</a>
+			</div>
+		</div>
+	</header>
+	<main class="container-xxl">
+		<div class="row mt-3 mb-3">
+			<div class="col-12 col-md-9 destaque">
+				<img src="img/banner-destaque.jpg" class="rounded">
+			</div>
+
+			<div class="col-12 col-md-3 rounded comunicados">
+				<p class="acesse">Acesse:</p>
+
+				<div class="btn-group shadow-sm mb-3">
+				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+				    Dropdown
+				  </button>
+				  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+				    <li><a class="dropdown-item" href="#">Menu item</a></li>
+				    <li><a class="dropdown-item" href="#">Menu item</a></li>
+				    <li><a class="dropdown-item" href="#">Menu item</a></li>
+				  </ul>
+				</div>
+
+				<div class="btn-group shadow-sm mb-3">
+				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+				    Dropdown
+				  </button>
+				  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+				    <li><a class="dropdown-item" href="#">Menu item</a></li>
+				    <li><a class="dropdown-item" href="#">Menu item</a></li>
+				    <li><a class="dropdown-item" href="#">Menu item</a></li>
+				  </ul>
+				</div>
+
+				<div class="btn-group shadow-sm mb-3">
+				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+				    Dropdown
+				  </button>
+				  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+				    <li><a class="dropdown-item" href="#">Menu item</a></li>
+				    <li><a class="dropdown-item" href="#">Menu item</a></li>
+				    <li><a class="dropdown-item" href="#">Menu item</a></li>
+				  </ul>
+				</div>
+				<h2>Comunicados</h2>
+			</div>
+		</div>
+	</main>
+
+	<footer class="footer text-center d-flex align-items-center justify-content-center">
+		<p class="copyright">Prefeitura do Município de São Paulo</p>
+	</footer>
+
+	<script src="assets/dist/js/bootstrap.bundle.min.js"></script>
+	
 </body>
 </html>
