--- a/index.html
+++ b/index.html
@@ -18,9 +18,77 @@
 	<header>
 		<div class="container-xxl">
 			<div class="row">
-				<a href="#" class="brand">
-					<img src="img/logo-pmsp.svg">
-				</a>
+
+				<div class="col-12 col-md-4 logo">
+				    <nav class="navbar navbar-dark nav-principal">
+				    	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
+					        <span class="navbar-toggler-icon"></span>
+					    </button>
+
+					    <a href="#" class="brand">
+							<img src="img/logo-pmsp.svg">
+						</a>
+
+					      <div class="collapse navbar-collapse" id="navbarsExample01">
+					        <ul class="navbar-nav me-auto mb-2">
+					          <li class="nav-item">
+					            <a class="nav-link active" aria-current="page" href="#">Home</a>
+					          </li>
+					          <li class="nav-item">
+					            <a class="nav-link" href="#">Link</a>
+					          </li>
+					          <li class="nav-item">
+					            <a class="nav-link disabled">Disabled</a>
+					          </li>
+					          <li class="nav-item dropdown">
+					            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
+					            <ul class="dropdown-menu" aria-labelledby="dropdown01">
+					              <li><a class="dropdown-item" href="#">Action</a></li>
+					              <li><a class="dropdown-item" href="#">Another action</a></li>
+					              <li><a class="dropdown-item" href="#">Something else here</a></li>
+					            </ul>
+					          </li>
+					        </ul>
+
+					    </div>
+					</nav>
+
+					<div class="collapse navbar-collapse" id="navbarsPrincipal">
+				        <ul class="navbar-nav me-auto mb-2">
+				          <li class="nav-item">
+				            <a class="nav-link active" aria-current="page" href="#">Home</a>
+				          </li>
+				          <li class="nav-item">
+				            <a class="nav-link" href="#">Link</a>
+				          </li>
+				          <li class="nav-item">
+				            <a class="nav-link disabled">Disabled</a>
+				          </li>
+				          <li class="nav-item dropdown">
+				            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
+				            <ul class="dropdown-menu" aria-labelledby="dropdown01">
+				              <li><a class="dropdown-item" href="#">Action</a></li>
+				              <li><a class="dropdown-item" href="#">Another action</a></li>
+				              <li><a class="dropdown-item" href="#">Something else here</a></li>
+				            </ul>
+				          </li>
+				        </ul>
+				        <form>
+				          <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+				        </form>
+				    </div>
+				</div>
+
+				<div class="col-12 col-md-8"> 
+
+					<div class="redes-sociais">
+						Redes Sociais
+					</div>				
+
+					<div class="user">
+						Usuário
+					</div>
+				</div>
 			</div>
 		</div>
 	</header>
@@ -68,6 +136,7 @@
 				    <li><a class="dropdown-item" href="#">Coordenadoria de Atenção Básica (CAB)</a></li>
 				    <li><a class="dropdown-item" href="#">Departamento de Atenção Especializada</a></li>
 				    <li><a class="dropdown-item" href="#">Coordenadoria de Vigilância em Saúde (Covisa)</a></li>
+				    <li><a class="dropdown-item" href="#">Coordenadoria de IST/Aids</a></li>
 				  </ul>
 				</div>
 
@@ -116,6 +185,57 @@
 				</div>
 
 			</div>
+		</div>
+
+		<div class="row mt-3 mb-3 g-0 boletins">
+			<h2>Boletins</h2>
+			<div class="col-12 col-md-8 rounded g-0 p-3 border">
+				<h3>Saúde + Perto</h3>
+			</div>
+			<div class="col-12 col-md-4 rounded g-0 p-3 border">
+				<h3>Conecta</h3>
+			</div>
+		</div>
+
+
+		<div class="row mb-3 g-0 youtube">
+
+			<h2>Nossos programas</h2>
+
+			<div class="col-12 bg-light border rounded">
+
+				<div class="row g-0 programas">
+
+					<div class="col-6 col-md-3 p-3">
+						<img src="img/1.jpg" class="w-100">
+					</div>
+					<div class="col-6 col-md-3 p-3">
+						<img src="img/2.jpg" class="w-100">
+					</div>
+					<div class="col-6 col-md-3 p-3">
+						<img src="img/3.jpg" class="w-100">
+					</div>
+					<div class="col-6 col-md-3 p-3">
+						<img src="img/4.jpg" class="w-100">
+					</div>
+					<div class="col-6 col-md-3 p-3">
+						<img src="img/5.jpg">
+					</div>
+					<div class="col-6 col-md-3 p-3">
+						<img src="img/6.jpg">
+					</div>
+					<div class="col-6 col-md-3 p-3">
+						<img src="img/7.jpg">
+					</div>
+					<div class="col-6 col-md-3 p-3">
+						<img src="img/8.jpg">
+					</div>
+				</div>
+
+			</div>
+
+			<a href="#" class="ver-todos">Assista todos os vídeos no nosso canal</a>
+
 		</div>
 	</main>
 
