Flexo Family Font

--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
 				  </div>
 				  <div class="carousel-inner">
 				    <div class="carousel-item active">
-				      <img src="img/banner-destaque.jpg" class="d-block w-100 rounded" alt="...">
+				      <img src="img/banner-destaque.jpg" class="d-block w-100 border rounded shadow-sm" alt="...">
 				    </div>
 				    <div class="carousel-item">
-				      <img src="img/banner-destaque.jpg" class="d-block w-100 rounded" alt="...">
+				      <img src="img/banner-destaque.jpg" class="d-block w-100 border rounded shadow-sm" alt="...">
 				    </div>
 				    <div class="carousel-item">
-				      <img src="img/banner-destaque.jpg" class="d-block w-100 rounded" alt="...">
+				      <img src="img/banner-destaque.jpg" class="d-block w-100 border rounded shadow-sm" alt="...">
 				    </div>
 				  </div>
 				  <button class="carousel-control-prev" type="button" data-bs-target="#carouselDestaque" data-bs-slide="prev">
@@ -125,10 +125,11 @@
 			</div>
 			<!-- Carousel - Fim-->
 
+			<!-- Dropdowns - Início -->
 			<div class="col-12 col-md-3 rounded comunicados d-flex flex-column justify-content-between">
 				<p class="acesse">Acesse:</p>
 
-				<div class="btn-group shadow-sm mb-3">
+				<div class="btn-group shadow-sm mt-3">
 				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
 				    Secretaria-executiva de Atenção Básica, Especialidades e Vigilância em Saúde
 				  </button>
@@ -140,7 +141,7 @@
 				  </ul>
 				</div>
 
-				<div class="btn-group shadow-sm mb-3">
+				<div class="btn-group shadow-sm mt-3">
 				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
 				    Secretaria-executiva de Atenção Hospitalar
 				  </button>
@@ -151,7 +152,7 @@
 				  </ul>
 				</div>
 
-				<div class="btn-group shadow-sm mb-3">
+				<div class="btn-group shadow-sm mt-3">
 				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
 				    Secretaria-executiva de Gestão Administrativa e Integrada
 				  </button>
@@ -162,7 +163,7 @@
 				  </ul>
 				</div>
 
-				<div class="btn-group shadow-sm mb-3">
+				<div class="btn-group shadow-sm mt-3">
 				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
 				    Secretaria Executiva de Regulação, Monitoramento, Avaliação e Parcerias
 				  </button>
@@ -173,7 +174,7 @@
 				  </ul>
 				</div>
 
-				<div class="btn-group shadow-sm mb-3">
+				<div class="btn-group shadow-sm mt-3">
 				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
 				    Coordenadoria Jurídica (Cojur)
 				  </button>
@@ -185,24 +186,49 @@
 				</div>
 
 			</div>
+			<!-- Dropdowns - Fim -->
 		</div>
 
-		<div class="row mt-3 mb-3 g-0 boletins">
+		<!-- Boletins - Início -->
+		<div class="row mt-3 mb-3 boletins">
+
 			<h2>Boletins</h2>
-			<div class="col-12 col-md-8 rounded g-0 p-3 border">
-				<h3>Saúde + Perto</h3>
+
+			<div class="col-12 col-md-8">
+				<div class="row g-0 bg-light border rounded shadow-sm p-3">
+					<div class="col-12">
+						<h3><img src="img/saude-mais-perto.png"></h3>
+					</div>
+					<div class="col-12 col-md-6">
+						<h3>notícias</h3>
+						<a href="#" class="ver-todos">Ver todos</a>
+					</div>
+					<div class="col-12 col-md-6">
+						<h3>gente</h3>
+						<a href="#" class="ver-todos">Ver todos</a>
+					</div>
+				</div>
 			</div>
-			<div class="col-12 col-md-4 rounded g-0 p-3 border">
-				<h3>Conecta</h3>
+			<div class="col-12 col-md-4">
+				<div class="row g-0 bg-light border rounded shadow-sm p-3">
+					<div class="col-12">
+						<h3><img src="img/conecta.png"></h3>
+					</div>
+					<div class="col-12">
+						<h3>banner</h3>
+						<a href="#" class="ver-todos">Ver todos</a>
+					</div>
+				</div>
 			</div>
 		</div>
+		<!-- Boletins - Fim -->
 
-
+		<!-- Youtube - Início -->
 		<div class="row mb-3 g-0 youtube">
 
 			<h2>Nossos programas</h2>
 
-			<div class="col-12 bg-light border rounded">
+			<div class="col-12 bg-light border rounded shadow-sm">
 
 				<div class="row g-0 programas">
 
@@ -237,6 +263,7 @@
 			<a href="#" class="ver-todos">Assista todos os vídeos no nosso canal</a>
 
 		</div>
+		<!-- Youtube - Fim -->
 	</main>
 
 	<footer class="footer text-center d-flex align-items-center justify-content-center">
