--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Secretaria Municipal da Saúde</title>
-	<!-- Fontes -->
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
 
 	<!-- Bootstrap core CSS -->
 	<link rel="stylesheet" type="text/css" href="assets/dist/css/bootstrap.min.css" >
@@ -21,7 +17,7 @@
 
 				<div class="col-12 col-md-4 logo">
 				    <nav class="navbar navbar-dark nav-principal">
-				    	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
+				    	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsPrincipal" aria-controls="navbarsPrincipal" aria-expanded="false" aria-label="Toggle navigation">
 					        <span class="navbar-toggler-icon"></span>
 					    </button>
 
@@ -29,7 +25,7 @@
 							<img src="img/logo-pmsp.svg">
 						</a>
 
-					      <div class="collapse navbar-collapse" id="navbarsExample01">
+					      <div class="collapse navbar-collapse" id="navbarsPrincipal">
 					        <ul class="navbar-nav me-auto mb-2">
 					          <li class="nav-item">
 					            <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -52,31 +48,7 @@
 
 					    </div>
 					</nav>
-
-					<div class="collapse navbar-collapse" id="navbarsPrincipal">
-				        <ul class="navbar-nav me-auto mb-2">
-				          <li class="nav-item">
-				            <a class="nav-link active" aria-current="page" href="#">Home</a>
-				          </li>
-				          <li class="nav-item">
-				            <a class="nav-link" href="#">Link</a>
-				          </li>
-				          <li class="nav-item">
-				            <a class="nav-link disabled">Disabled</a>
-				          </li>
-				          <li class="nav-item dropdown">
-				            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
-				            <ul class="dropdown-menu" aria-labelledby="dropdown01">
-				              <li><a class="dropdown-item" href="#">Action</a></li>
-				              <li><a class="dropdown-item" href="#">Another action</a></li>
-				              <li><a class="dropdown-item" href="#">Something else here</a></li>
-				            </ul>
-				          </li>
-				        </ul>
-				        <form>
-				          <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-				        </form>
-				    </div>
+					
 				</div>
 
 				<div class="col-12 col-md-8"> 
@@ -133,7 +105,7 @@
 				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
 				    Secretaria-executiva de Atenção Básica, Especialidades e Vigilância em Saúde
 				  </button>
-				  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+				  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
 				    <li><a class="dropdown-item" href="#">Coordenadoria de Atenção Básica (CAB)</a></li>
 				    <li><a class="dropdown-item" href="#">Departamento de Atenção Especializada</a></li>
 				    <li><a class="dropdown-item" href="#">Coordenadoria de Vigilância em Saúde (Covisa)</a></li>
@@ -145,7 +117,7 @@
 				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
 				    Secretaria-executiva de Atenção Hospitalar
 				  </button>
-				  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+				  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
 				    <li><a class="dropdown-item" href="#">Menu item</a></li>
 				    <li><a class="dropdown-item" href="#">Menu item</a></li>
 				    <li><a class="dropdown-item" href="#">Menu item</a></li>
@@ -156,7 +128,7 @@
 				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
 				    Secretaria-executiva de Gestão Administrativa e Integrada
 				  </button>
-				  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+				  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
 				    <li><a class="dropdown-item" href="#">Menu item</a></li>
 				    <li><a class="dropdown-item" href="#">Menu item</a></li>
 				    <li><a class="dropdown-item" href="#">Menu item</a></li>
@@ -167,7 +139,7 @@
 				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
 				    Secretaria Executiva de Regulação, Monitoramento, Avaliação e Parcerias
 				  </button>
-				  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+				  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
 				    <li><a class="dropdown-item" href="#">Menu item</a></li>
 				    <li><a class="dropdown-item" href="#">Menu item</a></li>
 				    <li><a class="dropdown-item" href="#">Menu item</a></li>
@@ -178,7 +150,7 @@
 				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
 				    Coordenadoria Jurídica (Cojur)
 				  </button>
-				  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+				  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
 				    <li><a class="dropdown-item" href="#">Departamento de Demandas Judiciais em Saúde e Atendimento a Órgãos de Controle</a></li>
 				    <li><a class="dropdown-item" href="#">Departamento de Assessoramento Jurídico</a></li>
 				    
@@ -224,11 +196,11 @@
 		<!-- Boletins - Fim -->
 
 		<!-- Youtube - Início -->
-		<div class="row mb-3 g-0 youtube">
+		<div class="row mt-3 mb-3 g-0 youtube">
 
 			<h2>Nossos programas</h2>
 
-			<div class="col-12 bg-light border rounded shadow-sm">
+			<div class="col-12 bg-light border rounded shadow-sm mb-3">
 
 				<div class="row g-0 programas">
 
@@ -264,6 +236,45 @@
 
 		</div>
 		<!-- Youtube - Fim -->
+
+		<div class="row mt-3 mb-3 p-3 g-0 bg-light border rounded shadow-sm especial-saude">
+			<h2>Especial Saúde</h2>
+
+			<div class="col-6 col-md-3 p-3 text-center">
+				<img src="img/sms-pergunta.png">
+				<h3 class="text-center">SMS Pergunta</h3>
+			</div>
+			<div class="col-6 col-md-3 p-3 text-center">
+				<img src="img/educacao-permanente.png">
+				<h3 class="text-center">Educação Permanente</h3>
+			</div>
+			<div class="col-6 col-md-3 p-3 text-center">
+				<img src="img/boas-praticas.png">
+				<h3 class="text-center">Boas Práticas</h3>
+			</div>
+			<div class="col-6 col-md-3 p-3 text-center">
+				<img src="img/boato-ou-fato.png">
+				<h3 class="text-center">Boato ou Fato</h3>
+			</div>
+
+			<div class="col-6 col-md-3 p-3 text-center">
+				<img src="img/sms-na-midia.png">
+				<h3 class="text-center">SMS na Mídia</h3>
+			</div>
+			<div class="col-6 col-md-3 p-3 text-center">
+				<img src="img/conta-pra-gente.png">
+				<h3 class="text-center">Conta pra Gente</h3>
+			</div>
+			<div class="col-6 col-md-3 p-3 text-center">
+				<img src="img/cuide-se-tambem.png">
+				<h3 class="text-center">Cuide-se também</h3>
+			</div>
+			<div class="col-6 col-md-3 p-3 text-center">
+				<img src="img/dose-cultural.png" class="mx-auto">
+				<h3 class="text-center">Dose Cultural</h3>
+			</div>
+		</div>
+
 	</main>
 
 	<footer class="footer text-center d-flex align-items-center justify-content-center">
