Correção da área de usuário

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<header>
 		<div class="container-xxl">
-			<div class="row">
+			<div class="row d-flex align-items-center">
 
 				<div class="col-12 col-md-4 logo">
 				    <nav class="navbar navbar-dark nav-principal">
@@ -51,14 +51,28 @@
 					
 				</div>
 
-				<div class="col-12 col-md-8"> 
+				<div class="col-12 col-md-8 text-right"> 
 
-					<div class="redes-sociais">
-						Redes Sociais
-					</div>				
+					<div class="row">
 
-					<div class="user">
-						Usuário
+						<div class="col redes-sociais">
+							Redes Sociais
+						</div>				
+
+						<div class="col user text-end">
+							<div class="flex-shrink-0 dropdown">
+					          <a href="#" class="d-block link-light text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
+					          	Nome do usuário
+					            <img src="https://github.com/mdo.png" alt="Nome do Usuário" width="50" height="50" class="rounded-circle">
+					          </a>
+					          <ul class="dropdown-menu dropdown-menu-end text-small shadow" aria-labelledby="dropdownUser2">
+					            <li><a class="dropdown-item" href="#">Editar perfil...</a></li>
+					            <li><a class="dropdown-item" href="#">Configurações</a></li>
+					            <li><hr class="dropdown-divider"></li>
+					            <li><a class="dropdown-item" href="#">Sair</a></li>
+					          </ul>
+					        </div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -198,7 +212,7 @@
 		<!-- Youtube - Início -->
 		<div class="row mt-3 mb-3 g-0 youtube">
 
-			<h2>Nossos programas</h2>
+			<h2><img src="img/youtube.svg">Nossos programas</h2>
 
 			<div class="col-12 bg-light border rounded shadow-sm mb-3">
 
@@ -217,16 +231,16 @@
 						<img src="img/4.jpg" class="w-100">
 					</div>
 					<div class="col-6 col-md-3 p-3">
-						<img src="img/5.jpg">
+						<img src="img/5.jpg" class="w-100">
 					</div>
 					<div class="col-6 col-md-3 p-3">
-						<img src="img/6.jpg">
+						<img src="img/6.jpg" class="w-100">
 					</div>
 					<div class="col-6 col-md-3 p-3">
-						<img src="img/7.jpg">
+						<img src="img/7.jpg" class="w-100">
 					</div>
 					<div class="col-6 col-md-3 p-3">
-						<img src="img/8.jpg">
+						<img src="img/8.jpg" class="w-100">
 					</div>
 				</div>
 
@@ -237,6 +251,7 @@
 		</div>
 		<!-- Youtube - Fim -->
 
+		<!-- Especial Saúde - Início -->
 		<div class="row mt-3 mb-3 p-3 g-0 bg-light border rounded shadow-sm especial-saude">
 			<h2>Especial Saúde</h2>
 
@@ -273,6 +288,52 @@
 				<img src="img/dose-cultural.png" class="mx-auto">
 				<h3 class="text-center">Dose Cultural</h3>
 			</div>
+		</div>
+		<!-- Especial Saúde - Fim -->
+
+		<div class="row">
+
+			<!-- Fala Gestor - Início -->
+
+			<div class="col-12 col-md-6 mb-3 mt-3 fala-gestor">
+
+				<h2><img src="img/fala-gestor.png">Fala Gestor</h2>
+
+				<div class="row bg-light border rounded shadow-sm g-0 p-3">
+					<div class="col-12 col-md-5">
+						<img src="img/foto-gestor.jpg" class="w-100" alt="Nome do Gestor">
+					</div>
+
+					<div class="col-12 col-md-7 p-3">
+						<h3>Nome do Gestor</h3>
+						<p class="cargo">Cargo do Gestor</p>
+						<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining </p>
+						<a href="#" class="ver-mais">Leia o texto completo</a>
+					</div>
+				</div>
+			</div>
+
+			<!-- Fala Gestor - Fim -->
+
+			<!-- Eventos - Início -->
+
+			<div class="col-12 col-md-6 mb-3 mt-3 eventos">
+
+				<h2><img src="img/eventos.png">Eventos</h2>
+
+				<div class="row bg-light border rounded shadow-sm g-0 p-3">
+					<div class="col-12 col-md-6">
+						<h3>Nome do Evento</h3>
+					</div>
+
+					<div class="col-12 col-md-6">
+						
+					</div>
+				</div>
+			</div>
+
+			<!-- Eventos - Fim -->
+
 		</div>
 
 	</main>
