--- a/index.html
+++ b/index.html
@@ -180,28 +180,63 @@
 
 			<h2>Boletins</h2>
 
-			<div class="col-12 col-md-8">
+			<div class="col-12 col-md-8 h-100">
 				<div class="row g-0 bg-light border rounded shadow-sm p-3">
-					<div class="col-12">
-						<h3><img src="img/saude-mais-perto.png"></h3>
+					<div class="col-12 pb-3">
+						<img src="img/saude-mais-perto.png" class="logo-boletim">
 					</div>
 					<div class="col-12 col-md-6">
-						<h3>notícias</h3>
+						<div class="row mb-3">
+							<div class="col-6 d-flex align-items-center">
+								<img src="img/boletim-noticias.jpg" class="border">
+							</div>
+
+							<div class="col-6 p-3">
+								<span>Notícias</span>
+								<h3>Edição XX</h3>
+								<p class="data">20 a 25 de fevereiro de 2022</p>
+								<p class="descricao">Capital inicia busca ativa para vacinação de crianças contra Covid-19 nas escolas municipais</p>
+								<a href="#" class="btn download">Download</a>
+							</div>
+						</div>
 						<a href="#" class="ver-todos">Ver todos</a>
 					</div>
 					<div class="col-12 col-md-6">
-						<h3>gente</h3>
+						<div class="row mb-3">
+							<div class="col-6 d-flex align-items-center">
+								<img src="img/boletim-gente.jpg" class="border">
+							</div>
+
+							<div class="col-6 p-3">
+								<span>Gente</span>
+								<h3>Edição XX</h3>
+								<p class="data">21 de fevereiro de 2022</p>
+								<p class="descricao">Alcione conta como SUS foi importante para a construção da consciência social que tem hoje</p>
+								
+								<a href="#" class="btn download">Download</a>
+							</div>
+						</div>
 						<a href="#" class="ver-todos">Ver todos</a>
 					</div>
 				</div>
 			</div>
 			<div class="col-12 col-md-4">
-				<div class="row g-0 bg-light border rounded shadow-sm p-3">
-					<div class="col-12">
-						<h3><img src="img/conecta.png"></h3>
+				<div class="row g-0 bg-light border rounded shadow-sm p-3 h-100">
+					<div class="col-12 pb-3">
+						<img src="img/conecta.png" class="logo-boletim">
 					</div>
 					<div class="col-12">
-						<h3>banner</h3>
+						<div class="row mb-3">
+							<div class="col-6 d-flex align-items-center">
+								<img src="img/boletim-conecta.jpg" class="border">
+							</div>
+							<div class="col-6">
+								<h3>Edição XX</h3>
+								<p class="data">20 a 25 de fevereiro de 2022</p>
+								<p class="descricao">Saúde mobiliza equipes para vacinar crianças de 5 a 11 anos contra Covid-19 nas escolas.</p>
+								<a href="#" class="btn download">Download</a>
+							</div>
+						</div>
 						<a href="#" class="ver-todos">Ver todos</a>
 					</div>
 				</div>
@@ -291,11 +326,11 @@
 		</div>
 		<!-- Especial Saúde - Fim -->
 
-		<div class="row">
+		<div class="row mb-3">
 
 			<!-- Fala Gestor - Início -->
 
-			<div class="col-12 col-md-6 mb-3 mt-3 fala-gestor">
+			<div class="col-12 col-md-6 mb-3 mt-3 h-100 fala-gestor">
 
 				<h2><img src="img/fala-gestor.png">Fala Gestor</h2>
 
@@ -317,17 +352,21 @@
 
 			<!-- Eventos - Início -->
 
-			<div class="col-12 col-md-6 mb-3 mt-3 eventos">
+			<div class="col-12 col-md-6 mb-3 mt-3 h-100 eventos">
 
 				<h2><img src="img/eventos.png">Eventos</h2>
 
-				<div class="row bg-light border rounded shadow-sm g-0 p-3">
-					<div class="col-12 col-md-6">
+				<div class="row bg-light border rounded shadow-sm g-0 pt-3 pb-3">
+					<div class="col-12 col-md-6 p-3">
 						<h3>Nome do Evento</h3>
+						<p class="data">12/12/2022</p>
+						<p class="local">Local do Evento</p>
+						<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining </p>
+						<a href="#" class="ver-mais">Ver detalhes do evento</a>
 					</div>
 
-					<div class="col-12 col-md-6">
-						
+					<div class="col-12 col-md-6 p-3 shadow-sm d-flex align-items-center justify-content-center">						
+				        Calendário com todos eventos
 					</div>
 				</div>
 			</div>
