--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="container-xxl">
 			<div class="row d-flex align-items-center">
 
-				<div class="col-12 col-md-4 logo">
+				<div class="col-9 col-md-4 logo">
 				    <nav class="navbar navbar-dark nav-principal">
 				    	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsPrincipal" aria-controls="navbarsPrincipal" aria-expanded="false" aria-label="Toggle navigation">
 					        <span class="navbar-toggler-icon"></span>
@@ -51,18 +51,24 @@
 					
 				</div>
 
-				<div class="col-12 col-md-8 text-right"> 
+				<div class="col-3 col-md-8 text-right"> 
 
 					<div class="row">
 
-						<div class="col redes-sociais">
-							Redes Sociais
+						<div class="col redes-sociais d-none d-md-flex align-items-center justify-content-end">
+							<img src="img/facebook_icon.png" class="icones">
+							<img src="img/instagram_icon.png" class="icones">
+							<img src="img/youtube_icon.png" class="icones">
+							<img src="img/twitter_icon.png" class="icones">
+							<img src="img/tiktok_icon.png" class="icones">
 						</div>				
 
 						<div class="col user text-end">
 							<div class="flex-shrink-0 dropdown">
 					          <a href="#" class="d-block link-light text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
-					          	Nome do usuário
+					          	<div class="d-none d-md-inline-block p-1">
+					          		Nome do usuário
+					          	</div>
 					            <img src="https://github.com/mdo.png" alt="Nome do Usuário" width="50" height="50" class="rounded-circle">
 					          </a>
 					          <ul class="dropdown-menu dropdown-menu-end text-small shadow" aria-labelledby="dropdownUser2">
