Adição das secretarias

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-	<header class="fixed-top">
+	<header class="">
 		<div class="container-xxl">
 			<div class="row d-flex align-items-center">
 
@@ -127,6 +127,8 @@
 				    <li><a class="dropdown-item" href="#">Departamento de Atenção Especializada</a></li>
 				    <li><a class="dropdown-item" href="#">Coordenadoria de Vigilância em Saúde (Covisa)</a></li>
 				    <li><a class="dropdown-item" href="#">Coordenadoria de IST/Aids</a></li>
+				    <li><a class="dropdown-item" href="#">Coordenadoria de Saúde e Proteção ao Animal Doméstico (Cosap)</a></li>
+				    <li><a class="dropdown-item" href="#">Coordenadorias Regionais de Saúde</a></li>
 				  </ul>
 				</div>
 
@@ -135,9 +137,9 @@
 				    Secretaria-executiva de Atenção Hospitalar
 				  </button>
 				  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
-				    <li><a class="dropdown-item" href="#">Menu item</a></li>
-				    <li><a class="dropdown-item" href="#">Menu item</a></li>
-				    <li><a class="dropdown-item" href="#">Menu item</a></li>
+				    <li><a class="dropdown-item" href="#">Coordenadoria de Assistência Hospitalar</a></li>
+				    <li><a class="dropdown-item" href="#">Coordenadoria de Urgências e Emergências, que inclui o Serviço de Atendimento Móvel de Urgência (Samu)</a></li>
+				    <li><a class="dropdown-item" href="#">Doze hospitais sob gestão da administração direta</a></li>
 				  </ul>
 				</div>
 
@@ -146,9 +148,10 @@
 				    Secretaria-executiva de Gestão Administrativa e Integrada
 				  </button>
 				  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
-				    <li><a class="dropdown-item" href="#">Menu item</a></li>
-				    <li><a class="dropdown-item" href="#">Menu item</a></li>
-				    <li><a class="dropdown-item" href="#">Menu item</a></li>
+				    <li><a class="dropdown-item" href="#">Coordenadoria de Finanças e Orçamento (CFO)</a></li>
+				    <li><a class="dropdown-item" href="#">Coordenadoria de Gestão de Pessoas (Cogep)</a></li>
+				    <li><a class="dropdown-item" href="#">Coordenadoria de Administração e Suprimentos (CAS)</a></li>
+				    <li><a class="dropdown-item" href="#">Divisão de Administração e Serviços de Apoio</a></li>
 				  </ul>
 				</div>
 
@@ -157,9 +160,12 @@
 				    Secretaria Executiva de Regulação, Monitoramento, Avaliação e Parcerias
 				  </button>
 				  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
-				    <li><a class="dropdown-item" href="#">Menu item</a></li>
-				    <li><a class="dropdown-item" href="#">Menu item</a></li>
-				    <li><a class="dropdown-item" href="#">Menu item</a></li>
+				    <li><a class="dropdown-item" href="#">Coordenadoria de Parcerias e Contratação de Serviços de Saúde (CPCS)</a></li>
+				    <li><a class="dropdown-item" href="#">Coordenadoria de Avaliação e Controle da Assistência Complementar</a></li>
+				    <li><a class="dropdown-item" href="#">Coordenadoria de Regulação (Creg)</a></li>
+				    <li><a class="dropdown-item" href="#">Coordenadoria de Informação em Saúde</a></li>
+				    <li><a class="dropdown-item" href="#">Coordenadoria de Controle Interno</a></li>
+				    <li><a class="dropdown-item" href="#">Departamento de Apoio Técnico às Demandas Judiciais em Saúde</a></li>
 				  </ul>
 				</div>
 
