--- a/index.html
+++ b/index.html
@@ -360,8 +360,8 @@
 
 				<h2><img src="img/fala-gestor.png">Fala Gestor</h2>
 
-				<div class="row bg-light border rounded shadow-sm g-0 p-3">
-					<div class="col-12 col-md-5">
+				<div class="row bg-light border rounded shadow-sm g-0">
+					<div class="col-12 col-md-5 p-3">
 						<img src="img/foto-gestor.jpg" class="w-100" alt="Nome do Gestor">
 					</div>
 
@@ -382,7 +382,7 @@
 
 				<h2><img src="img/eventos.png">Eventos</h2>
 
-				<div class="row bg-light border rounded shadow-sm g-0 pt-3 pb-3">
+				<div class="row bg-light border rounded shadow-sm g-0">
 					<div class="col-12 col-md-6 p-3">
 						<h3>Nome do Evento</h3>
 						<p class="data">12/12/2022</p>
