--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
 			</div>
 
-			<a href="#" class="ver-todos">Assista todos os vídeos no nosso canal</a>
+			<a href="https://www.youtube.com/c/saudeprefsp" target="_blank" class="ver-todos">Assista todos os vídeos no nosso canal</a>
 
 		</div>
 		<!-- Youtube - Fim -->
