--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 	<!-- Bootstrap core CSS -->
 	<link rel="stylesheet" type="text/css" href="assets/dist/css/bootstrap.min.css" >
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -43,6 +44,9 @@
 					<div class="row justify-content-end">
 
 						<div class="col redes-sociais d-none d-md-flex align-items-center justify-content-end">
+							<a href="#">
+								<i class="bi bi-search icones" style="font-size: 25px;"></i>
+							</a>
 							<a href="https://www.facebook.com/saudeprefsp" target="_blank">
 								<img src="img/facebook_icon.png" class="icones">
 							</a>
