Mudança na edição do boletim

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
 							<div class="col-6 p-3">
 								<span>Notícias</span>
-								<h3>Edição XX</h3>
+								<h3>Edição 85</h3>
 								<p class="data">20 a 25 de fevereiro de 2022</p>
 								<p class="descricao">Capital inicia busca ativa para vacinação de crianças contra Covid-19 nas escolas municipais</p>
 								<a href="#" class="btn download">Download</a>
